[gd_scene load_steps=20 format=3 uid="uid://c8htcrx2djl68"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_gf64x"]
[ext_resource type="PackedScene" uid="uid://b0pjrcwehwmxs" path="res://objects/muro.tscn" id="2_bw1nk"]
[ext_resource type="PackedScene" uid="uid://7thypxftr2e1" path="res://objects/player.tscn" id="3_5cuq4"]
[ext_resource type="PackedScene" uid="uid://8e65ep6k6qh0" path="res://objects/ball.tscn" id="4_l58me"]
[ext_resource type="FontFile" uid="uid://dbyk413mvomt4" path="res://assets/fonts/Xolonium-Regular.ttf" id="5_3xi7i"]
[ext_resource type="Texture2D" uid="uid://5t1xnsq0xy0n" path="res://assets/sprites/UI/New game Button.png" id="6_c4hg4"]
[ext_resource type="Texture2D" uid="uid://cq48x4q5eql2x" path="res://assets/sprites/UI/Pause Square Button.png" id="7_agl5w"]
[ext_resource type="Texture2D" uid="uid://bi7o4frllwww2" path="res://assets/sprites/UI/New game Button Pressed.png" id="7_ryfar"]
[ext_resource type="Texture2D" uid="uid://dfdy1g1646drs" path="res://assets/sprites/UI/New game Button Hover.png" id="7_vt3cj"]
[ext_resource type="PackedScene" uid="uid://dga0tbtypp5kp" path="res://scenes/pause.tscn" id="8_v07jw"]
[ext_resource type="Texture2D" uid="uid://c0qw4lj18rp4y" path="res://assets/sprites/UI/Pause Square Button Pressed.png" id="10_frhxs"]
[ext_resource type="Texture2D" uid="uid://dvtbk831xb31d" path="res://assets/sprites/UI/Pause Square Button Hover.png" id="11_xjj3i"]
[ext_resource type="AudioStream" uid="uid://wlkriis7gw6x" path="res://assets/audio/PUNCH_CLEAN_HEAVY_10.wav" id="13_ydjsw"]
[ext_resource type="AudioStream" uid="uid://bijvslvib0e0a" path="res://assets/audio/WHOOSH_ARM_SWING_01.wav" id="14_de7n2"]

[sub_resource type="Gradient" id="Gradient_trx5t"]
offsets = PackedFloat32Array(0, 0.485455, 0.758065)
colors = PackedColorArray(0.192556, 0.192556, 0.192556, 1, 3.36915e-07, 0, 0.559719, 1, 0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7pp2t"]
gradient = SubResource("Gradient_trx5t")
fill_from = Vector2(0, 1)
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8qkm"]
size = Vector2(20, 644)

[sub_resource type="Theme" id="Theme_j1vbw"]
default_font = ExtResource("5_3xi7i")

[sub_resource type="Theme" id="Theme_1jxso"]
resource_local_to_scene = true
default_font = ExtResource("5_3xi7i")
default_font_size = 80

[node name="Main" type="Node"]
script = ExtResource("1_gf64x")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_7pp2t")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(571, 0, 571, 648)
width = 5.0

[node name="muros" type="Node2D" parent="."]
position = Vector2(566, -12)

[node name="muro" parent="muros" instance=ExtResource("2_bw1nk")]
position = Vector2(0, 3)

[node name="muro2" parent="muros" instance=ExtResource("2_bw1nk")]
position = Vector2(7, 669)

[node name="GoalP2" type="Area2D" parent="muros"]
position = Vector2(-589, 349)

[node name="CollisionShape2D" type="CollisionShape2D" parent="muros/GoalP2"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_w8qkm")

[node name="GoalP1" type="Area2D" parent="muros"]
position = Vector2(608, 349)

[node name="CollisionShape2D" type="CollisionShape2D" parent="muros/GoalP1"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_w8qkm")

[node name="Player" parent="." instance=ExtResource("3_5cuq4")]
position = Vector2(20, 342)

[node name="Player2" parent="." instance=ExtResource("3_5cuq4")]
position = Vector2(1130, 342)

[node name="Ball" parent="." instance=ExtResource("4_l58me")]
position = Vector2(570, 342)
max_contacts_reported = 4
contact_monitor = true

[node name="ScoreP1" type="Label" parent="."]
offset_left = 462.0
offset_top = 33.0
offset_right = 573.0
offset_bottom = 146.0
theme = SubResource("Theme_j1vbw")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreP2" type="Label" parent="."]
offset_left = 575.0
offset_top = 34.0
offset_right = 670.0
offset_bottom = 147.0
theme = SubResource("Theme_1jxso")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GOAL" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -38.0
offset_right = 126.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("5_3xi7i")
theme_override_font_sizes/font_size = 60
text = "GOOAL!"

[node name="TimerSpeedBall" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="NewGameButton" type="TextureButton" parent="."]
visible = false
offset_left = 488.0
offset_top = 427.0
offset_right = 1088.0
offset_bottom = 627.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("6_c4hg4")
texture_pressed = ExtResource("7_ryfar")
texture_hover = ExtResource("7_vt3cj")

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 544.0
offset_top = 576.0
offset_right = 744.0
offset_bottom = 776.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("7_agl5w")
texture_pressed = ExtResource("10_frhxs")
texture_hover = ExtResource("11_xjj3i")

[node name="Pause" parent="." instance=ExtResource("8_v07jw")]
visible = false

[node name="PunchAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ydjsw")

[node name="WhooshAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_de7n2")

[connection signal="body_entered" from="muros/GoalP2" to="." method="_on_goal_p_2_body_entered"]
[connection signal="body_entered" from="muros/GoalP1" to="." method="_on_goal_p_1_body_entered"]
[connection signal="body_entered" from="Ball" to="." method="_on_ball_body_entered"]
[connection signal="timeout" from="TimerSpeedBall" to="." method="_on_timer_speed_ball_timeout"]
[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="onPlay" from="Pause" to="." method="_on_pause_on_play"]
